[gd_scene load_steps=8 format=3 uid="uid://c82f37lwmfm0w"]

[ext_resource type="Script" uid="uid://4wtft8kori28" path="res://scene_1/Scene1.gd" id="1_bnqud"]
[ext_resource type="Script" uid="uid://bgttfic1e21rg" path="res://scene_1/camera.gd" id="2_5wul8"]
[ext_resource type="FontFile" uid="uid://clcr8xcc7aouw" path="res://fonts/JetBrainsMono[wght].ttf" id="2_itffy"]
[ext_resource type="Script" uid="uid://ksd7n7pogwb8" path="res://scene_1/sub_viewport.gd" id="4_5wul8"]

[sub_resource type="Environment" id="Environment_4n20x"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.5
glow_strength = 1.5
glow_hdr_threshold = 0.1

[sub_resource type="LabelSettings" id="LabelSettings_4n20x"]
font = ExtResource("2_itffy")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_6odll"]
font = ExtResource("2_itffy")
font_size = 24

[node name="Scene1" type="Node2D"]
script = ExtResource("1_bnqud")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4n20x")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2(583, 334)
script = ExtResource("2_5wul8")

[node name="Background" type="ColorRect" parent="."]
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="Label1" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 768.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "WHY IS THIS SH*T SO F**KING HARD
欸我操了
怎么这么这么这么这么这么这么这么这么这么这么这么这么这么难啊卧槽"
label_settings = SubResource("LabelSettings_4n20x")
horizontal_alignment = 1
vertical_alignment = 1
ellipsis_char = ""
max_lines_visible = 1
visible_characters_behavior = 4

[node name="Label2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 231.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "l2l2l2l2l2
l2l2l2l2l2l2l2l2"
label_settings = SubResource("LabelSettings_6odll")
horizontal_alignment = 1
vertical_alignment = 1
ellipsis_char = ""
max_lines_visible = 1
visible_characters_behavior = 3

[node name="UI" type="SubViewportContainer" parent="."]
offset_right = 475.0
offset_bottom = 116.0
stretch = true
mouse_target = true
script = ExtResource("4_5wul8")

[node name="SubViewport" type="SubViewport" parent="UI"]
transparent_bg = true
size = Vector2i(475, 116)

[node name="Button" type="Button" parent="UI/SubViewport"]
offset_left = 15.0
offset_top = 14.0
offset_right = 175.0
offset_bottom = 50.0
text = "Change Text"

[node name="LineEdit" type="LineEdit" parent="UI/SubViewport/Button"]
layout_mode = 0
offset_top = 42.0
offset_right = 442.0
offset_bottom = 85.0
placeholder_text = " - ENGLISH ONLY - "
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[connection signal="mouse_entered" from="Label2" to="." method="_on_label_2_mouse_entered"]
[connection signal="mouse_exited" from="Label2" to="." method="_on_label_2_mouse_exited"]
[connection signal="pressed" from="UI/SubViewport/Button" to="UI/SubViewport" method="_on_button_pressed"]
